# lab3-pytorch

./: .gitignore  README.md  basic_notebook.ipynb  notebook.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: classroom.yml
lab_utils/: __init__.py  convert_notebook.py  format_report.py  visualization.py
tests/: test_notebook.py
