[project]
name = "lab"
version = "0.1.0"
authors = [
    { name = "Hai Duong, Tran", email = "10422021@student.vgu.edu.vn" },
    { name = "That Nhat Minh, Ton", email = "10422050@student.vgu.edu.vn" },
]
description = "Lab 2 - Pandas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.7",
    "nbconvert>=7.17.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "ruff>=0.15.8",
    "torch>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
